[gd_scene load_steps=26 format=3 uid="uid://chp8ktiu7rc2x"]

[ext_resource type="Script" path="res://player.gd" id="1_2iejj"]
[ext_resource type="AudioStream" uid="uid://b57bsm4umcnv0" path="res://assets/sounds/footstep.wav" id="2_gd13n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uohlc"]
height = 1.975

[sub_resource type="SphereMesh" id="SphereMesh_nqw73"]
radius = 0.1
height = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_urjm6"]
size = Vector3(0.2, 1, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_v5ah0"]
size = Vector3(0.1, 1, 0.1)

[sub_resource type="Animation" id="Animation_3u37c"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.4, -0.8), Vector3(0.5, -0.41149, -0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0158825, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5ctcg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.4, -0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponStick/WeaponHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8v2p7"]
resource_name = "swing_h"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 0.241484, 2),
"update": 0,
"values": [Vector3(1.80268e-09, -1.40073, -1.59486), Vector3(0, -0.266267, -1.59486), Vector3(-3.93996e-09, 1.27259, -1.59486)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.0999999, -0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.28409, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponStick/WeaponHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.075, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ecqdu"]
resource_name = "recoil_h"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector3(0.5, -0.4, -0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, -2),
"update": 0,
"values": [Vector3(0, 0, -1.5708), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06, 0.5),
"transitions": PackedFloat32Array(1, 2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.261118, -0.264525, -0.0156661), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0r2oe"]
resource_name = "swing_v"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 0.241484, 2),
"update": 0,
"values": [Vector3(0, -1.5708, -1.5708), Vector3(0, -1.21475, -1.5708), Vector3(0, 0.26529, -1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 1.01725e-07, -0.8), Vector3(0.5, 9.73536e-08, -0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector3(0, 0, 1.5708), Vector3(-1.29154, 0, 1.5708)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponStick/WeaponHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.075, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nohn7"]
resource_name = "recoil_v"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector3(0.5, -0.4, -0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06, 0.5),
"transitions": PackedFloat32Array(1, 2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.261118, -0.264525, -0.0156661), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wnolm"]
resource_name = "jab"
length = 0.75
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 0.2, 2, 0.5, 1),
"update": 0,
"values": [Vector3(0.3, -0.4, -0.6), Vector3(0.1, -0.4, -0.7), Vector3(0, -0.0999999, -1.03126), Vector3(0.1, -0.4, -0.7), Vector3(0.3, -0.4, -0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.5, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 0.2, 2, 0.5, 1),
"update": 0,
"values": [Vector3(-1.48353, -5.86126e-08, 0.0872665), Vector3(-1.5708, 0.0872665, 0), Vector3(-1.38738, 0, 0), Vector3(-1.5708, 0.0872665, 0), Vector3(-1.48353, -5.86126e-08, 0.0872665)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponStick/WeaponHitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.08, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h18ec"]
_data = {
"RESET": SubResource("Animation_5ctcg"),
"idle": SubResource("Animation_3u37c"),
"jab": SubResource("Animation_wnolm"),
"recoil_h": SubResource("Animation_ecqdu"),
"recoil_v": SubResource("Animation_nohn7"),
"swing_h": SubResource("Animation_8v2p7"),
"swing_v": SubResource("Animation_0r2oe")
}

[sub_resource type="SphereMesh" id="SphereMesh_syt5t"]
lightmap_size_hint = Vector2i(8, 5)
radius = 0.2
height = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_7orb5"]
lightmap_size_hint = Vector2i(8, 5)
radius = 0.4
height = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_rvv0m"]
size = Vector3(0.2, 0.1, 0.4)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i1ld8"]
radius = 0.25
height = 1.0

[sub_resource type="Animation" id="Animation_xu280"]
resource_name = "walk"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaistPivot/RightButt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(-2, 2, -2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.13446, 0, 0), Vector3(0, 0, 0), Vector3(-1.13446, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaistPivot/LeftButt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(-2, 2, -2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.13446, 0, 0), Vector3(0, 0, 0), Vector3(1.13446, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaistPivot/LeftButt/LeftFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(2, 2, 2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.436332, 0, 0), Vector3(0, 0, 0), Vector3(-0.523599, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaistPivot/RightButt/RightFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(2, 2, 2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.523599, 0, 0), Vector3(0, 0, 0), Vector3(-0.436332, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaistPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(-2, 2, -2, 2),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.55, 0), Vector3(0, 0.5, 0), Vector3(0, 0.55, 0)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.05, 0.55),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"footstep"
}, {
"args": [],
"method": &"footstep"
}]
}

[sub_resource type="Animation" id="Animation_mi7yv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaistPivot/RightButt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaistPivot/LeftButt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaistPivot/LeftButt/LeftFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaistPivot/RightButt/RightFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaistPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}

[sub_resource type="Animation" id="Animation_0msls"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaistPivot/LeftButt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0.174533, 0, 0), Vector3(-1.0472, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaistPivot/RightButt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0.174533, 0, 0), Vector3(-0.436332, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaistPivot/RightButt/RightFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.48353, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaistPivot/LeftButt/LeftFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.349066, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaistPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.475036, 0), Vector3(0, 0.575036, 0)]
}

[sub_resource type="Animation" id="Animation_sb44j"]
resource_name = "rise"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaistPivot/LeftButt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.0472, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaistPivot/RightButt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.436332, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaistPivot/RightButt/RightFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.48353, 0, 0), Vector3(-1.54544, 0, 0), Vector3(-1.48353, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaistPivot/LeftButt/LeftFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.349066, 0, 0), Vector3(-0.487104, 0, 0), Vector3(-0.349066, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaistPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.575036, 0)]
}

[sub_resource type="Animation" id="Animation_piby3"]
resource_name = "fall_transition"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaistPivot/LeftButt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(-1.0472, 0, 0), Vector3(0.174533, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaistPivot/RightButt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(-0.436332, 0, 0), Vector3(0.785398, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaistPivot/RightButt/RightFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(-1.48353, 0, 0), Vector3(-0.349066, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaistPivot/LeftButt/LeftFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector3(-0.349066, 0, 0), Vector3(0.16908, -0.0277863, -0.0163262)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaistPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Vector3(0, 0.575036, 0)]
}

[sub_resource type="Animation" id="Animation_pyxic"]
resource_name = "fall"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaistPivot/LeftButt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.174533, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaistPivot/RightButt:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.785398, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaistPivot/RightButt/RightFoot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.349066, 0, 0), Vector3(-0.299202, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaistPivot/LeftButt/LeftFoot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.16908, -0.0277863, -0.0163262), Vector3(0.283232, -0.0285268, -0.0196233)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaistPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kmnt1"]
_data = {
"RESET": SubResource("Animation_mi7yv"),
"fall": SubResource("Animation_pyxic"),
"fall_transition": SubResource("Animation_piby3"),
"jump": SubResource("Animation_0msls"),
"rise": SubResource("Animation_sb44j"),
"walk": SubResource("Animation_xu280")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2iejj")
head_path = NodePath("HeadPivot")
face_path = NodePath("HeadPivot/Face")
body_path = NodePath("WaistPivot/Body")
camera_path = NodePath("HeadPivot/CameraFirstPerson")
animation_path = NodePath("AnimationPlayer")
hand_animation_path = NodePath("HeadPivot/SwingPivot/HandPivot/HandAnimation")
weapon_hitbox_path = NodePath("HeadPivot/SwingPivot/HandPivot/WeaponStick/WeaponHitbox")
weapon_audio_path = NodePath("HeadPivot/SwingPivot/HandPivot/WeaponStick/AudioStreamPlayer3D")
foot_audio_path = NodePath("FootPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.988, 0)
shape = SubResource("CapsuleShape3D_uohlc")

[node name="HeadPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="SwingPivot" type="Node3D" parent="HeadPivot"]

[node name="HandPivot" type="Node3D" parent="HeadPivot/SwingPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.4, -0.8)

[node name="HandModel" type="MeshInstance3D" parent="HeadPivot/SwingPivot/HandPivot"]
mesh = SubResource("SphereMesh_nqw73")

[node name="WeaponStick" type="Node3D" parent="HeadPivot/SwingPivot/HandPivot"]
transform = Transform3D(1, 1.74623e-09, -4.65661e-10, 1.62981e-09, 1, 0, 4.65661e-10, -2.98023e-08, 1, 0, 0, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="HeadPivot/SwingPivot/HandPivot/WeaponStick"]
transform = Transform3D(1, -3.37605e-09, -9.31323e-10, 2.66454e-15, 1, 2.98023e-08, 9.31322e-10, 0, 1, 0, 0.450615, -0.0698934)

[node name="WeaponHitbox" type="Area3D" parent="HeadPivot/SwingPivot/HandPivot/WeaponStick"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.323688, -0.06602)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HeadPivot/SwingPivot/HandPivot/WeaponStick/WeaponHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_urjm6")

[node name="StickModel" type="MeshInstance3D" parent="HeadPivot/SwingPivot/HandPivot/WeaponStick"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.323688, -0.06602)
mesh = SubResource("BoxMesh_v5ah0")
skeleton = NodePath("../..")

[node name="HandAnimation" type="AnimationPlayer" parent="HeadPivot/SwingPivot/HandPivot"]
autoplay = "idle"
playback_default_blend_time = 0.1
libraries = {
"": SubResource("AnimationLibrary_h18ec")
}

[node name="Face" type="MeshInstance3D" parent="HeadPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)
visible = false
mesh = SubResource("SphereMesh_syt5t")
skeleton = NodePath("../..")

[node name="Face2" type="MeshInstance3D" parent="HeadPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.96047e-08)
mesh = SubResource("SphereMesh_7orb5")
skeleton = NodePath("../..")

[node name="CameraFirstPerson" type="Camera3D" parent="HeadPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
cull_mask = 1048573

[node name="WaistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="RightButt" type="Node3D" parent="WaistPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)

[node name="RightFoot" type="Node3D" parent="WaistPivot/RightButt"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0.1)

[node name="RightFootMesh" type="MeshInstance3D" parent="WaistPivot/RightButt/RightFoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -0.2)
mesh = SubResource("BoxMesh_rvv0m")
skeleton = NodePath("../../../..")

[node name="LeftButt" type="Node3D" parent="WaistPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)

[node name="LeftFoot" type="Node3D" parent="WaistPivot/LeftButt"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0097326, -0.5, 0.1)

[node name="LeftFootMesh" type="MeshInstance3D" parent="WaistPivot/LeftButt/LeftFoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -0.2)
mesh = SubResource("BoxMesh_rvv0m")
skeleton = NodePath("../../../..")

[node name="Body" type="MeshInstance3D" parent="WaistPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
mesh = SubResource("CapsuleMesh_i1ld8")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.1
libraries = {
"": SubResource("AnimationLibrary_kmnt1")
}

[node name="FootPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_gd13n")
volume_db = -11.0
unit_size = 5.0
max_polyphony = 2

[connection signal="body_entered" from="HeadPivot/SwingPivot/HandPivot/WeaponStick/WeaponHitbox" to="." method="_on_weapon_hitbox_body_entered"]
[connection signal="animation_finished" from="HeadPivot/SwingPivot/HandPivot/HandAnimation" to="." method="_on_hand_animation_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
